@@ -1,3 +1,12 @@
+2019-01-11  Devin Rousso  <drousso@apple.com>
+
+        Fix style CFNetworkSPI style checker warnings from r239698
+        https://bugs.webkit.org/show_bug.cgi?id=193369
+
+        Reviewed by Joseph Pecoraro.
+
+        * pal/spi/cf/CFNetworkSPI.h:
+
 2019-01-10  John Wilander  <wilander@apple.com>
 
         Override the session configuration for cookieAcceptPolicy
