@@ -1,3 +1,12 @@
+2019-01-11  Devin Rousso  <drousso@apple.com>
+
+        Fix style CFNetworkSPI style checker warnings from r239698
+        https://bugs.webkit.org/show_bug.cgi?id=193369
+
+        Reviewed by Joseph Pecoraro.
+
+        * wtf/Platform.h:
+
 2019-01-11  Said Abou-Hallawa  <sabouhallawa@apple.com>
 
         WorkQueue::concurrentApply() passes a raw pointer to a temporary String to Thread::create().
